@@ -5,15 +5,13 @@
 package utilidades;
 
 import java.awt.Component;
+import java.io.File;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
-import javax.media.ControllerEvent;
-import javax.media.ControllerListener;
-import javax.media.Format;
-import javax.media.Manager;
-import javax.media.Player;
-import javax.media.PlugInManager;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+import javax.media.*;
 import net.sourceforge.jffmpeg.AudioDecoder;
 import net.sourceforge.jffmpeg.VideoDecoder;
 import sun.awt.PlatformFont;
@@ -27,6 +25,7 @@ public class Video implements ControllerListener, Runnable{
     private Player player = null;
     private boolean canPlay;
     private Thread theThread;
+    private boolean loop = false;
     public Video(String filename){
         super();
         this.filename = filename;
@@ -34,9 +33,10 @@ public class Video implements ControllerListener, Runnable{
         this.load();
     }
     public URL getURL(){
+        
         try {
-            URL url = new URL("file://"+System.getProperty("user.dir")+"/videos/"+this.filename);
-            return url;
+            File f = new File(this.filename);
+            return f.toURL();
         } catch (Exception ex) {
             Utilidades.alertar("Problema ao criar a URL para o video:"+ex.getMessage());
             return null;
@@ -57,6 +57,13 @@ public class Video implements ControllerListener, Runnable{
             Utilidades.alertar("Erro ao criar o player:"+ex.getMessage()+" para o arquivo "+this.filename);
         }
     }
+    public void join(){
+        try {
+            theThread.join();
+        } catch (Exception ex) {
+            Utilidades.alertar("Erro ao aguardar pela Thread:"+ex.getMessage());
+        }
+    }
     public Component getSwingComponent(){
         while(!this.canPlay){
             continue;
@@ -71,6 +78,9 @@ public class Video implements ControllerListener, Runnable{
     }
     public float getActualTime(){
         return (float)player.getMediaTime().getSeconds();
+    }
+    public void setLoop(boolean loop){
+        this.loop = loop;
     }
     public boolean install(){
         VideoDecoder video = new VideoDecoder();
@@ -109,8 +119,15 @@ public class Video implements ControllerListener, Runnable{
     }
     public void pause(){
         this.player.stop();
+        
     }
-
+    public void reset(){
+        this.pause();
+        this.player.setMediaTime(new Time(0));
+    }
+    public void close(){
+       this.player.deallocate();
+    }
     public void controllerUpdate(ControllerEvent ce) {
         switch(this.player.getState()){
             case Player.Realized:
@@ -120,7 +137,11 @@ public class Video implements ControllerListener, Runnable{
             case Player.Prefetched:
             case Player.Realizing:
             case Player.Prefetching:
-                break;             
+                break;  
+        }
+        if(loop && ce instanceof EndOfMediaEvent){
+            this.reset();
+            this.play();
         }
     }
 }
